--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -6,7 +6,7 @@
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 62.5% !important;
 }
 
 li {
@@ -549,65 +549,87 @@ a:visited {
 
 .landing__background {
   width: 100%;
-  position: absolute;
+  height: 100%;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
+  align-items: flex-end;
+  position: absolute;
+  z-index: 100;
+  overflow: hidden;
 }
-.landing__background-box {
-  flex-basis: 40%;
-}
-.landing__background-box:nth-child(1) {
-  position: relative;
-  top: 15vh;
-}
-.landing__background-img {
+.landing__background .page-heading__right {
+  height: 100%;
   width: 100%;
-  height: auto;
+  position: absolute;
+  overflow: hidden;
 }
-.landing__background-box:nth-child(2) {
-  text-align: right;
+.landing__background .page-heading__right .landing-background__right {
+  width: 48vw;
+  position: absolute;
+  right: -25vw;
+  top: -32vw;
+  overflow: hidden;
+  transform: rotate(-9.32deg);
 }
-.landing__background-box:nth-child(2) .svg-curve-two {
-  width: 20vw;
+.landing__background .page-heading__right .svg-curve-right {
+  width: 40vw;
   height: auto;
   position: absolute;
-  top: 16vw;
-  right: -6.5vw;
-  overflow: visible;
+  top: 8.5vw;
+  right: -12vw;
 }
-.landing__background-box:nth-child(2) path {
+.landing__background .page-heading__right .svg-curve-right .path-right {
+  fill: transparent;
   width: 10vw;
   height: auto;
 }
-.landing__background-box:nth-child(2) textPath {
+.landing__background .page-heading__right .svg-curve-right textPath {
   font-family: "Cremona", sans-serif;
   font-size: 3.75em;
   font-weight: 400;
-  font-size: 4em;
+  font-size: 3.5rem;
   letter-spacing: 0.15em;
   white-space: nowrap;
   fill: #4A4F4F;
 }
-.landing__background-img:nth-child(1) {
-  position: relative;
-}
-.landing__background-img:nth-child(2) {
-  position: relative;
-  z-index: 20;
-}
-.landing__background .bg-img-right {
-  width: 43vw;
+.landing__background .page-heading__left {
+  height: 100%;
+  width: 100%;
   position: absolute;
-  right: -20vw;
-  top: -28vw;
   overflow: hidden;
-  transform: rotate(-9.32deg);
-  z-index: 0;
+}
+.landing__background .page-heading__left .landing-background__left {
+  width: 36vw;
+  position: absolute;
+  left: -12vw;
+  top: -4vw;
+  transform: rotate(10.32deg);
+}
+.landing__background .page-heading__left .svg-curve-left {
+  width: 26vw;
+  height: fit-content;
+  position: absolute;
+  top: 30.5vw;
+  left: 7.5vw;
+  font-size: 100%;
+}
+.landing__background .page-heading__left .svg-curve-left .path-left {
+  fill: transparent;
+  width: 15vw;
+  height: auto;
+}
+.landing__background .page-heading__left .svg-curve-left textPath {
+  font-family: "Cremona", sans-serif;
+  font-size: 3.75em;
+  font-weight: 400;
+  font-size: 5.25rem;
+  letter-spacing: 0.15em;
+  white-space: nowrap;
+  fill: #4A4F4F;
 }
 
 .landing__body {
-  height: 140vh;
+  height: fit-content;
   width: 100%;
 }
 
