--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -211,7 +211,7 @@ a:visited {
   flex-direction: row;
   align-items: center;
   align-content: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   margin-right: 10vw;
   display: none;
 }
@@ -663,11 +663,12 @@ a:visited {
 .landing__products-cards {
   display: -webkit-inline-box;
   flex-direction: row;
+  cursor: grab;
   width: 100%;
   gap: 4em;
   -ms-overflow-style: none;
   scrollbar-width: none;
-  overflow-x: scroll;
+  overflow: auto;
 }
 .landing__products-cards::-webkit-scrollbar {
   display: none;
@@ -977,6 +978,10 @@ a:visited {
   width: 10vw;
   z-index: 500;
 }
+.form-radio:checked {
+  border: solid 5px #D5E0A8;
+  transition: 0.4s;
+}
 .form__radio-all {
   width: 80%;
   display: flex;
@@ -1252,9 +1257,10 @@ a:visited {
   border-radius: none;
   padding: 0.75em 2em;
   cursor: pointer;
+  width: 100%;
 }
 
-@media screen and (min-width: 1px) and (max-width: 1024px) {
+@media screen and (min-width: 1px) and (max-width: 864px) {
   .upload__box {
     flex-direction: column;
   }
