--- a/frontend/sass/_nav.scss
+++ b/frontend/sass/_nav.scss
@@ -29,7 +29,7 @@
         flex-direction: row;
         align-items: center;
         align-content: center;
-        justify-content: space-between;
+        justify-content: flex-end;
         margin-right: 10vw;
         display: none;
     }
