--- a/frontend/sass/_landing.scss
+++ b/frontend/sass/_landing.scss
@@ -191,6 +191,12 @@
                 top: -4vw;
                 // overflow: hidden;
                 transform: rotate(10.32deg);
+
+                @media #{$laptop, $smallScreen} {
+                    width: 45vw;
+                    left: -12vw;
+                    top: -4vw;
+                }
             }
 
             .svg-curve-left{
@@ -218,7 +224,15 @@
                 
                  
                 }
+
+                @media #{$laptop, $smallScreen} {
+                    width: 32vw;
+                    top: 39.5vw;
+                    left: 12.5vw;
+                }
             }
+
+            
             
         }
 
@@ -332,16 +346,17 @@
         display: flex;
         flex-direction: row;
         padding-left: 10vw;
+        gap: 1.6rem;
         // justify-content: center;
 
         @media #{$laptop, $smallScreen} {
-            margin-top: 22vw;
+            margin-top: 20vw !important;
             flex-basis: 30% !important;
         }
     }
 
     &-image{
-        width: 20vw;
+        width: 18vw;
         height: auto;
         position: relative;
         top: 15vh;
