--- a/frontend/sass/_nav.scss
+++ b/frontend/sass/_nav.scss
@@ -1,91 +1,57 @@
 .nav{
     width: 100%;
-    height: 30vh;
-    position: relative;
+    height: 15vw;
     display: flex;
-    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
     text-transform: uppercase;
     z-index: 100;
+    
 
     &__logo{
-        flex-basis: 39.5%;
+        min-width: 20vw;
+        max-width: 20vw;
+        object-fit: contain;
         z-index: 51;
     }
 
-    &-logo{
-        width: 20vw;
-    }
-
-    &__navigation{
-        flex-basis: 60.5%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        gap: 5em;
-    }
-
-    &__top{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        align-content: center;
-        justify-content: space-between;
-        margin-right: 10vw;
-        display: none;
-    }
-
-    &__bottom{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        align-content: center;
-        justify-content: space-between;
-        margin-right: 10vw;
+    .nav-logo{
+        object-fit: contain;
     }
 
     &__ul{
+        height: 100%;
         display: flex;
         flex-direction: row;
         align-items: center;
         gap: 9em;
         color: $white;
         margin-bottom: 0;
-        // margin-left: 9vw;
+        padding: 0;
     }
 
     &-li{
         font-family: $contentfont;
         font-size: 1.6em;
         font-weight: 200;
+        padding-left: none;
     }
 
     &-li:hover{
         color: $green;
     }
 
-    &-back{
-        @include button-text;
-    }
-
-
     &__btn{
+        height: 100%;
         display: flex;
         flex-direction: row;
         gap: 3em;
         align-items: center;
+        padding-right: 10vw;
     }
-
-    &__back{
-        display: flex;
-        flex-direction: row;
-        gap: 3em;
-        align-items: center;
-        display: none;
-    }
-
 
     &-fa-landing{
-        color: $orange;
+        color: $lightgrey;
         font-size: 3em;
     }
 
@@ -95,16 +61,16 @@
     }
 }
 
-@media screen and (min-width: 1201px) and (max-width:1500px) {
+// @media screen and (min-width: 1201px) and (max-width:1500px) {
     
-    .nav{
+//     .nav{
 
-        &__logo{
-            flex-basis: 37%;
-        }
+//         &__logo{
+//             flex-basis: 37%;
+//         }
         
-        &__navigation{
-            flex-basis: 63%;
-        }
-    }
-}
+//         &__navigation{
+//             flex-basis: 63%;
+//         }
+//     }
+// }
