--- a/frontend/sass/_products.scss
+++ b/frontend/sass/_products.scss
@@ -1,6 +1,6 @@
 .products{
     padding: 3vw 10vw;
-    padding-top: 0;
+    padding-top: 18vw;
 
 
     &-title{
@@ -33,6 +33,7 @@
 
         .cards{
             width: 20%;
+            margin-bottom: 4em;
 
             &-img{
 
@@ -71,10 +72,18 @@
 .product-detail{
     display: none;
     padding: 3% 10%;
+    width: 100%;
+    padding-top: 18vw;
 
     &__upper{
         display: flex;
+        justify-content: space-between;
         gap: 5vw;
+        width: 100%;
+
+        .product-description{
+            width: 100%
+        }
 
         .type{
             @include sub-heading;
@@ -106,6 +115,7 @@
             @include body-text;
             color: $darkgrey;
             font-size: 1.4em;
+            width: 100%;
         }
 
         .product-btns{
@@ -158,7 +168,21 @@
                 margin: 0;
                 border: none;
                 background-color: $lightgrey;
+
+                .care-up{
+                    display: none;
+                }
+
+                .shipping-up{
+                    display: none;
+                }
+
+                .purchase-up{
+                    display: none;
+                }
             }
+
+            
         }
         
     }
@@ -180,6 +204,13 @@
     width: 8vw;
     height: 8vw;
 
+    &:hover{
+        outline: solid 8px $green;
+        outline-offset: -4px;
+        outline-style: solid;
+        transition: 0.4s;
+        cursor: pointer;
+    }
 }
 
 .main-image{
@@ -245,6 +276,9 @@
     }
 
     .artist-socials{
+        display: flex;
+        gap: 1em;
+
         .fa-circle{
             color: $orange;
         }
