--- a/frontend/sass/_secondary-nav.scss
+++ b/frontend/sass/_secondary-nav.scss
@@ -1,19 +1,21 @@
 .secondary-nav{
     width: 100%;
     height: 15vw;
+    position: absolute;
     display: flex;
-    flex-direction: row;
-    justify-content: spa;
+    justify-content: space-between;
+    align-items: flex-start;
     text-transform: uppercase;
-    position: relative;
-    z-index: 5000;
-
+    z-index: 1000;
+    
     &__logo{
-        flex-basis: 25%;
+        min-width: 15vw;
+        max-width: 15vw;
+        object-fit: contain;
         z-index: 51;
 
         .secondary-nav-logo{
-            width: 17vw;
+            object-fit: contain;
         }
     }
 
@@ -22,79 +24,35 @@
         text-decoration: none;
     }
 
-    &__navigation{
-        flex-basis: 68vw;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        gap: 5em;
-    }
-
-    &__top{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        align-content: center;
-        justify-content: space-between;
-        margin-right: 10vw;
-        display: none;
-    }
-
-    &__bottom{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        align-content: center;
-        justify-content: space-between;
-  
-    }
-
     &__ul{
-        width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-between;
-        // gap: 9em;/
+        gap: 9em;
         color: $darkgrey;
-        padding-right: 15vw;
+        margin-bottom: 0;
+        padding: 0;
     }
 
     &-li{
         font-family: $contentfont;
-        font-size: 1.8em;
-        font-weight: 500;
+        font-size: 1.6em;
+        font-weight: 300;
+        padding-left: none;
     }
 
     &-li:hover{
         color: $green;
     }
 
-    &-back{
-        @include button-text;
-        font-size: 1.8em;
-    }
-
-    &__back-arrow {
-        display: none;
-    }
-
     &__btn{
-        width: fit-content;
-        display: flex;
-        justify-content: flex-end;
-        flex-direction: row;
-        gap: 3em;
-        align-items: center;
-        white-space: nowrap;
-        // padding-right: 10vw;
-    }
-
-    &__back{
+        height: 100%;
         display: flex;
         flex-direction: row;
         gap: 3em;
         align-items: center;
+        padding-right: 10vw;
     }
 
 
