--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -305,6 +305,24 @@ a:visited {
 .secondary-nav__logo .secondary-nav-logo {
   object-fit: contain;
 }
+.secondary-nav .secondary-nav__back {
+  display: flex;
+  gap: 2em;
+  font-family: "Assistant", sans-serif;
+  font-size: 1.6em;
+  font-weight: 300;
+  cursor: pointer;
+}
+.secondary-nav .secondary-nav__back .secondary-nav-back {
+  border: none;
+  background-color: transparent;
+  color: #F4794F;
+  text-transform: uppercase;
+}
+.secondary-nav .secondary-nav__back .nav-fa-landing {
+  color: #F4794F;
+  font-size: 1.8em;
+}
 .secondary-nav a {
   color: #4A4F4F;
   text-decoration: none;
@@ -540,7 +558,7 @@ a:visited {
   width: 36vw;
   position: absolute;
   left: -12vw;
-  top: -4vw;
+  top: -6vw;
   transform: rotate(10.32deg);
 }
 @media (min-width: 1025px) and (max-width: 1200px), (min-width: 769px) and (max-width: 1024px) {
@@ -554,7 +572,7 @@ a:visited {
   width: 26vw;
   height: fit-content;
   position: absolute;
-  top: 30.5vw;
+  top: 28.5vw;
   left: 7.5vw;
   font-size: 100%;
 }
@@ -646,10 +664,11 @@ a:visited {
   margin-left: 3em;
 }
 .landing__content-text {
+  min-height: 25vw;
   flex-basis: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: flex-start;
   gap: 4em;
   padding-right: 10%;
   padding-left: 3%;
@@ -1508,7 +1527,6 @@ a:visited {
 .artist {
   min-height: 100vh;
   overflow: hidden;
-  padding-top: 15vw;
 }
 .artist-background {
   width: 100%;
@@ -1569,6 +1587,7 @@ a:visited {
   width: 100%;
   position: relative;
   z-index: 500;
+  padding-top: 15vw;
 }
 .artist-profile__top {
   display: flex;
@@ -1586,6 +1605,9 @@ a:visited {
 .artist-profile .top-left__left .artist-img {
   width: 10vw;
   padding-bottom: 5em;
+}
+.artist-profile .top-left__left .socials {
+  display: flex;
 }
 .artist-profile .top-left__left .fa-circle {
   color: #F4794F;
