--- a/frontend/sass/_artist.scss
+++ b/frontend/sass/_artist.scss
@@ -1,7 +1,7 @@
 .artist{
     min-height: 100vh;
     overflow: hidden;
-    padding-top: 15vw;
+  
 
     &-background{
         width: 100%;
@@ -79,6 +79,7 @@
         width: 100%;
         position: relative;
         z-index: 500;
+        padding-top: 15vw;
 
         &__top{
             display: flex;
@@ -99,6 +100,11 @@
             .artist-img{
                 width: 10vw;
                 padding-bottom: 5em;
+            }
+
+            .socials{
+                display: flex;
+                
             }
             
             .fa-circle{
