--- a/frontend/sass/_landing.scss
+++ b/frontend/sass/_landing.scss
@@ -188,7 +188,7 @@
                 width: 36vw;
                 position: absolute;
                 left: -12vw;
-                top: -4vw;
+                top: -6vw;
                 // overflow: hidden;
                 transform: rotate(10.32deg);
 
@@ -203,7 +203,7 @@
                 width: 26vw;
                 height: fit-content;
                 position: absolute;
-                top: 30.5vw;
+                top: 28.5vw;
                 left: 7.5vw;
                 font-size: 100%;
 
@@ -393,10 +393,11 @@
 
 
     &-text{
+        min-height: 25vw;
         flex-basis: 50%;
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;
+        justify-content: flex-start;
         gap: 4em;
         padding-right: 10%;
         padding-left: 3%;
