--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -34,6 +34,10 @@ a:visited {
   color: unset;
 }
 
+.hide {
+  display: none !important;
+}
+
 @-webkit-keyframes rotateWord {
   0% {
     opacity: 0;
@@ -2429,4 +2433,183 @@ a:visited {
   font-size: 1.5em;
   font-weight: 300;
   line-height: 1.6em;
+}
+
+.user {
+  min-height: 100vh;
+  overflow: hidden;
+}
+.user-background {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: absolute;
+  z-index: 100;
+  overflow: hidden;
+}
+.user-background .page-heading {
+  height: 100%;
+  width: 100%;
+  left: 3vw;
+  position: absolute;
+  overflow: hidden;
+  z-index: 100;
+}
+.user-background .page-heading .user-background__right {
+  width: 43vw;
+  position: absolute;
+  right: -25vw;
+  top: -26vw;
+  overflow: hidden;
+  transform: rotate(-9.32deg);
+  z-index: 100;
+}
+.user-background .page-heading .svg-curve {
+  width: 35vw;
+  height: auto;
+  position: absolute;
+  top: 8.5vw;
+  right: -11.5vw;
+  z-index: 100;
+}
+.user-background .page-heading path {
+  fill: transparent;
+  width: 10vw;
+  height: auto;
+}
+.user-background .page-heading textPath {
+  font-family: "Cremona", sans-serif;
+  font-size: 3.75em;
+  font-weight: 400;
+  font-size: 3em;
+  letter-spacing: 0.15em;
+  white-space: nowrap;
+  fill: #4A4F4F;
+}
+.user-background__left {
+  height: fit-content;
+  bottom: 20%;
+}
+.user-profile {
+  padding: 3% 10%;
+  width: 100%;
+  position: relative;
+  z-index: 500;
+  padding-top: 15vw;
+}
+.user-profile__top {
+  display: flex;
+}
+.user-profile .top-left {
+  display: flex;
+  width: 80%;
+}
+.user-profile .top-left__left {
+  width: 15vw;
+  min-height: 13vw;
+  display: flex;
+  flex-direction: column;
+}
+.user-profile .top-left__left .user-img {
+  width: 10vw;
+  padding-bottom: 5em;
+}
+.user-profile .top-left__left .socials {
+  display: flex;
+}
+.user-profile .top-left__left .fa-circle {
+  color: #F4794F;
+}
+.user-profile .top-left__left .fa-stack {
+  cursor: pointer;
+  padding: 0;
+  padding-right: 3vw;
+  text-align: left;
+}
+.user-profile .top-left__right {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-left: 2em;
+  min-height: 13vw;
+  justify-content: space-between;
+  overflow: hidden;
+}
+.user-profile .top-left__right .edit-profile-btn {
+  background: transparent;
+  border: none;
+  font-size: 1em;
+  padding-bottom: 6em;
+  color: #D5E0A8;
+  width: fit-content;
+  cursor: pointer;
+}
+.user-profile .top-left__right .edit-profile-btn :hover {
+  color: #F4794F;
+}
+.user-profile .top-left__right .edit-profile-btn :hover .fa-pen-to-square {
+  color: #fff;
+}
+.user-profile .top-left__right .edit-profile-btn .fa-pen-to-square {
+  color: #4A4F4F;
+}
+.user-profile .top-left__right .user-name {
+  font-family: "Cremona", sans-serif;
+  font-size: 3.75em;
+  font-weight: 400;
+  color: #4A4F4F;
+  padding-bottom: 1em;
+}
+.user-profile .top-left__right .user-about {
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 300;
+  line-height: 1.6em;
+  color: #4A4F4F;
+}
+.user-profile .user-profile__bottom {
+  margin-top: 7em;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2em;
+  position: relative;
+  z-index: 600;
+}
+.user-profile .user-profile__bottom .user-products {
+  width: fit-content;
+  overflow-x: scroll;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 4em;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.user-profile .user-profile__bottom .user-products::-webkit-scrollbar {
+  display: none;
+}
+.user-profile .user-profile__bottom .card .edit-btns {
+  width: 100%;
+  padding: 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  position: absolute;
+}
+.user-profile .user-profile__bottom .card .fa-stack {
+  cursor: pointer;
+  margin-bottom: 0.5em;
+}
+.user-profile .user-profile__bottom .card .fa-stack .fa-circle {
+  color: #D5E0A8;
+}
+.user-profile .user-profile__bottom .card .fa-stack .circle-trash {
+  color: #F4794F;
+}
+.user-profile .user-profile__bottom .card .fa-stack .fa-pen-to-square {
+  color: #4A4F4F;
 }
